user_guides/multi-cluster-nginx/openshift-4-11/ocp-route/nginx-ingress/nginx-ingress-route-443.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    virtual-server.f5.com/multiClusterServices: '[{"clusterName": "openshift-4-13", "serviceName":
          "nginxingress-sample-nginx-ingress-controller", "namespace": "nginx-ingress", "port": 443 }]'
    # you can define either service port or target port in the port value
  labels:
    f5type: systest
  name: nginx-ingress-route-443
  namespace: nginx-ingress
spec:
  host: cafe.example.com
  port:
    targetPort: 443
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: nginxingress-sample-nginx-ingress-controller
